package pizzaFactory;
import pizza.Pizza;

public abstract class PizzaFactory {

		Pizza create(String name) {
			return null;
			
		}
}	
