package pizzeria;

import pizza.Pizza;
import pizzaFactory.PizzaFactory;

public class PizzeriaStrasbourg extends Pizzeria {

	public PizzeriaStrasbourg(PizzaFactory pizzafcatory) {
		super(pizzafcatory);
		// TODO Auto-generated constructor stub
	}

	

	@Override
	Pizza createPizza(String type) {
		// TODO Auto-generated method stub
		return null;
	}

}
